tests/sksl/errors/Ossfuzz50922.glsl
### Compilation failed:

error: 1: unsized arrays are not permitted here
struct Tes{int[]i;};Tes$(){Tes$;}
           ^^^^^^
error: 1: unsized arrays are not permitted here
struct Tes{int[]i;};Tes$(){Tes$;}
                           ^^^^
error: 1: function '$' can exit without returning a value
struct Tes{int[]i;};Tes$(){Tes$;}
                          ^^^^^^^
3 errors
